...
            Button {
                sheet = .newRecipe
            } label: {
                Label("New Recipe", systemImage: "square.and.pencil")
            }
        } label: {
            Label("Add Recipe", systemImage: "plus")
        }
    }

    private var optionsMenu: some View {
        @Bindable var model = model
        return Menu {
...
